
lib_LTLIBRARIES = librfsavr.la
librfsavr_la_SOURCES = adc.c errno.c leds.c message.c string.c timers.c usart.c
librfsavr_la_CFLAGS = $(MCU_FLAG)
nobase_include_HEADERS = rfsavr/adc.h rfsavr/bits.h rfsavr/errno.h rfsavr/io.h rfsavr/leds.h rfsavr/message.h rfsavr/string.h rfsavr/timers.h rfsavr/usart.h
